styles/Home.module.scss
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@700&display=swap');
//font-family: 'Noto Sans TC', sans-serif;

// .container {
//     width: 80vw;
//     height: 100vh;
// }


.heroSection {
    height: calc(100vh - 80px);
    max-height: calc(100vh - 80px);
    overflow: hidden;

    // * {
        // border: 1px solid black;
    // }
    
    
}
.heroContainer {
    display: flex;
    width: 100vw;
    // height: 100vh;
    height: calc(100vh - 80px);
    // max-height: calc(100vh - 80px);
    // overflow: hidden;


    align-items: center;
    flex-direction: column;
    position: relative;

    .heading {
        display: flex;
        justify-content: center;
        align-items: flex-end;
        height: 25%;
        width: 100%;
        // border: 1px solid black;
        // width: 50%;
    }
    
    .heroImg {
        display: flex;
        justify-content: center;
        // align-items: center;
        width: 100%;
        height: 50%;
        // border: 1px solid red;
        padding: 3em;
        // display: none;


    }
    
    .launchBtn {
        position: absolute;
        bottom: 2.5vh;
        // justify-self: flex-end;
        // align-self: center;
    }
}


.waveSvg {
    z-index: -3;
    position: absolute;
    bottom: 0px;
    // border: 1px solid black;

}

// tablet
@media screen and (min-width: 768px) {
    .heroSection {
        height: calc(100vh - 100px);
        max-height: calc(100vh - 100px);
    }

    
    .heroContainer {
        height: calc(100vh - 100px);
        max-height: calc(100vh - 100px);

        .heroImg {
            display: flex;
            // justify-content: center;
            // align-items: center;
            width: 100%;
            height: 65%;
            // border: 1px solid red;
            padding: 3em;
        }
    }
}

// comp and up
@media screen and (min-width: 1080px) {

    .heroContainer {
        // background: orange;
        display: grid;
        grid-template-columns: 50% 50%;
        grid-template-rows: 95vh;
        grid-template-areas: 
            "text sprite";

        // justify-content: center;


        .heroImg {
            // border: 1px solid orange;
            grid-area: sprite;
            align-self: center;
            display: flex;
            justify-content: flex-start;
        }

        .heading {
            // border: 1px solid red;
            grid-area: text;
            align-self: center;
            display: flex;
            justify-content: flex-end;
            margin-bottom: 20em;
        }
    }



}


.featuresSection {
    div.container {
        background: var(--primary-color);
        height: 100vh;
        width: 100vw;
        border-top: 1px solid transparent; //fixes whitespace bug
        // border: 1px solid black;
        display: flex;
        flex-direction: column;
    }

    h1 {
        font-family: 'Noto Sans TC', sans-serif;
        color: var(--lightest-aqua);
        font-size: 7.5vh;
        font-weight: bold;
        text-align: center;
        padding: 0;
        margin-top: 3vh;
    }

    ul {
        // border: 1px solid orange;
        display: flex;
        flex-direction: column;
        justify-content: space-around;
        // height: calc(100vh - 30.5vh);
        // height: 80%;
        align-items: center;
        list-style: none;
        margin: 0;
        padding: 0;
        color: var(--lightest-aqua);
        font-size: 4vh;
        margin-bottom: 5%;
        flex: 1 1 100%;

        li {
            margin: 0;
            padding: 0;
            position: relative;


            &:before {
                content: "";
                position: absolute;
                left: auto;
                width: 40px;
                height: 40px;
                background-image: url('../public/img/index/check.svg');
                background-size: contain;
                margin-left: -1.5em;
            }
        }
    }
    @media screen and (min-width: 1080px) {
        div.container {
            // background: purple;
            display: grid;
            grid-template-columns: repeat(3, 1fr);
            grid-template-rows: 12.5vh auto;
            grid-template-areas:
                "header header header"
                "left features right";



            h1 {
                // border: 1px solid black;
                grid-area: header;
                height: 10.5vh;
            }

            ul {
                grid-area: features;
            }

            .left {
                grid-area: left;
                display: flex;
                flex-direction: column;
                justify-content: space-around;
                align-items: flex-end;
            }

            .right {
                grid-area: right;
                display: flex;
                flex-direction: column;
                justify-content: space-around;
                align-items: flex-start;
            }
        }
    }

}


.contactSection {
    .container {
        height: 100vh;
        display: flex;
        flex-direction: column;
        align-items: center;
        // border: 1px solid black;

        h1 {
            color: var(--primary-color);
            font-size: 7.5vh;
            font-family: 'Noto Sans TC', sans-serif;
            font-weight: bold;
            word-spacing: 500em;
            text-align: center;
            margin: 0;
            padding: 0;
            padding-top: 3vh;
            line-height: 1em;
            // height: 25%;
            // border: 1px solid black;
        }

        p {
            
            width: 100%;
            margin: 0;
            padding: 0 1em;
            flex: 1 1 100%;
            display: flex;
            align-items: center;
            // border: 1px solid black;
            text-align: center;
            font-size: 3vh;
            color: #949494;
        }

        .formWrapper {
            height: 100%;
            width: 75%;
            margin-bottom: 3vh;
            // flex-basis: 1200px
        }
    }









    @media screen and (min-width: 768px) {
        .container {
            // border: 1px solid black;
            display: grid;
            grid-template-columns: 1fr 1fr;
            grid-template-rows: auto auto;
            // height: 100vh;
            grid-template-areas: 
                "header header"
                "text user";
            align-items: start;
            grid-gap: 5%;
            width: 90vw;
            margin-left: 5vw;
            h1 {
                grid-area: header;
                line-height: normal;
                word-spacing: normal;
                // border: 1px solid black;
                margin-left: -5vw;
                margin-bottom: 1em;
                width: 100vw;
                align-self: start;
                margin-top: 0.5em;

            }


            p {
                // border: 1px solid black;
                grid-area: header;
                padding: 0;
                margin-top: 15%;
                align-self: center;
                max-width: 90%;
                justify-self: center;
                padding: 0 2em;
            }

            .left {
                // border: 1px solid orange;
                display: flex;
                justify-content: flex-end;
                div.ideaWrap {
                    grid-area: text;
                    align-self: end;
                    // width: 95%;
                    margin-left: 1em;
                    max-width: 350px;
                    max-height: auto;
                }
            }
            

            div.formWrapper {
                // border: 1px solid black;
                grid-area: user;
                // align-self: center;
                max-width: 400px;
                height: auto;
            }
        }
    }
    
    @media screen and (min-width: 1080px) {
        .container {
            // border: 1px solid black;
            display: grid;
            grid-template-columns: 1fr 1fr;
            grid-template-rows: auto auto;
            // height: 100vh;
            grid-template-areas: 
                "header header"
                "text user";
            // justify-items: center;
            grid-gap: 5%;
            align-items: center;
            h1 {
                grid-area: header;
                line-height: normal;
                word-spacing: normal;
                // border: 1px solid black;
                margin-bottom: 0;
                margin-top: 0;
    
            }
    
    
            .left {
                // border: 1px solid orange;
                align-self: center;
    
                grid-area: text;
                display: flex;
                flex-direction: column;
                justify-content: space-around;
                height: 100%;
                margin-bottom: 10vh;
    
                p {
                    padding: 0;
                    align-self: end;
                    width: 400px;
                    margin-top: 0;
                    max-width: 100%;
                }
    
                div.ideaWrap {
                    margin-top: 0vh;
                    align-self: end;
                    max-width: 500px;

                }
            }
            
    
            div.formWrapper {
                // border: 1px solid black;
                grid-area: user;
                // align-self: center;
                max-width: 400px;
                height: auto;
            }
        }
    }
}

